Still trying to fix fonts on mobile

--- a/blog/style.css
+++ b/blog/style.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,400;1,400&display=swap');
+
 html {
     height:-webkit-fill-available; /* fix for issue on iOS */
     line-height: 1.5;
-    font-family: 'IBM Plex Sans', sans-serif;  
-    src: url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;400&display=swap');
+    font-family: 'IBM Plex Sans', sans-serif;
     font-weight: 400;
     font-size: 20px;
     color: #2a252a;
